#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-02-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999994 released.

        * Fixed mozrepel install for Cygwin CPAN install.


2013-02-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999993 released.

        * Added temporary mozrepel error checking.


2013-02-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999992 released.

        * Added full command line to top of log file.


2013-02-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999991 released.

        * Removed error message from Makefile.PL.


2013-02-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999990 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999989 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999988 released.

        * Another Fix for installation of mozrepl in Makefile.PL.


2013-02-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999987 released.

        * More Fixes for installation of mozrepl in Makefile.PL.


2013-02-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999986 released.

        * More Fixes for installation of mozrepl in Makefile.PL.


2013-02-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999985 released.

        * Fixed mirror() when no time in Linux and daylight