@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 1975bd981abe58b145326e1667a38f4be590d245 ChangeLog
+SHA1 ee9ebb9815ebf7bfa0081c8defac43c6953d98dd ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 26476da5aac7204acc479e4e0179ca8cb48f4aa8 META.yml
-SHA1 40a638d7be32926a78285cf649eb4d84735f2552 MYMETA.json
-SHA1 56d481c9f890e2582891980cd016c1dfe4c7b8fb MYMETA.yml
-SHA1 678667655143925b4c6a4a9ae955bb75e2a52ec2 Makefile.PL
+SHA1 2dc2bb63de804f485e4feb749d0eff0c7b9fe75d META.yml
+SHA1 57fd49455a100a5babf44b2fb726fcc3aa852fa1 MYMETA.json
+SHA1 ac1f36695d37b3bc59f858c13f07cc657366e1b2 MYMETA.yml
+SHA1 b9bb554189d45b0c26b832d704b738843104dc79 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 fd082c1e181f6ebccc4fc512b13cb39f680ae078 lib/Net/FullAuto.pm
+SHA1 5011ddf33bd03b1be55be7bef3643323e6962618 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEX7e8ACgkQJM3IZYB6aOqOQgCfZqjDjBoRGrtG0yrY3NGcYajt
-3ukAn3hhkQZntSoWO4ToRTvoSUU4Bcnj
-=beQq
+iEYEARECAAYFAlEYHgMACgkQJM3IZYB6aOoT2ACdE3XBY8LgZX2hAViTNNViGerr
+wrgAoIPry+TzAjXuMJ8dmmoCJgEot14x
+=o5uZ
 -----END PGP SIGNATURE-----
